add_subdirectory( witness )
add_subdirectory( account_history )
add_subdirectory( elasticsearch )
add_subdirectory( market_history )
add_subdirectory( delayed_node )
add_subdirectory( debug_witness )
add_subdirectory( snapshot )
add_subdirectory( track_account )
add_subdirectory( upload_balances )
add_subdirectory( cli_wallet )